--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,41 +1,87 @@
-<%= form_for(@order) do |f| %>
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+<%= form_for(@order, html: { class: "form-horizontal buy_sal", role: "form" }) do |f| %>
   <% if @order.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
+    <div class="alert alert-danger alert-dismissable" role="alert">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <h4><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h4>
 
       <ul>
-      <% @order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% @order.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :stripe_id %><br>
-    <%= f.number_field :stripe_id %>
+  <%= f.hidden_field :stripeToken, class: "form-control" %>
+
+  <div class="form-group">
+    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :email, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+
+  <div class="form-group">
+    <%= f.label :address, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :address, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
+
+  <div class="form-group">
+    <%= f.label :city, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :city, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
+
+  <div class="form-group">
+    <%= f.label :state, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :state, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
+
+  <div class="form-group">
+    <%= f.label :zip, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :zip, class: "form-control col-lg-3" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :zip %><br>
-    <%= f.text_field :zip %>
+
+  <div class="form-group">
+    <%= f.label :cc, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :cc, class: "form-control",  "data-stripe" => "number" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-group">
+    <%= f.label :cvc, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :cvc, class: "form-control",  "data-stripe" => "cvc"  %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :exp_month, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :exp_month, class: "form-control",  "data-stripe" => "exp-month" %>
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :exp_year, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :exp_year, class: "form-control", "data-stripe" => "exp-year" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
