--- a/app/views/orders/home.html.erb
+++ b/app/views/orders/home.html.erb
@@ -27,7 +27,7 @@
 
     <div class="col-md-3 col-sm-6 hero-feature">
         <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
+            <%= image_tag "sea1.jpg" %>
             <div class="caption">
                 <h3>Taste the Sea</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -40,7 +40,7 @@
 
     <div class="col-md-3 col-sm-6 hero-feature">
         <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
+            <%= image_tag "sea2.jpg" %>
             <div class="caption">
                 <h3>Hot Yoga</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -53,7 +53,7 @@
 
     <div class="col-md-3 col-sm-6 hero-feature">
         <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
+            <%= image_tag "sea3.jpg" %>
             <div class="caption">
                 <h3>Hawaiian Hotsprings</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -66,7 +66,7 @@
 
     <div class="col-md-3 col-sm-6 hero-feature">
         <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
+            <%= image_tag "sea4.jpg" %>
             <div class="caption">
                 <h3>Rehydrates you with Nature.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
