added home text

--- a/app/views/orders/home.html.erb
+++ b/app/views/orders/home.html.erb
@@ -7,7 +7,10 @@
     <p id="total"><%= @order_count %> säl bought</p>
 
     <p>
-        Sustainable flexitarian ennui kale chips, Austin Shoreditch bitters trust fund ethical chia fanny pack butcher XOXO single-origin coffee. Swag cardigan Blue Bottle, taxidermy crucifix cornhole McSweeney's direct trade whatever meh kitsch scenester photo booth bicycle rights fashion axe. </p>
+
+        Säl is so healthy, it comes straight from the sea. Science and Scientists have determined that the more natural a beverage is, the healthier it is for you. You can't get any healthier than drinking straight from the sea. Säl comes straight from hawaiian lava runoff, mixing with glacial runoff.
+
+    </p>
     <p><button class="btn btn-primary btn-large buy-sal">: buy säl :</button>
     </p>
 </header>
@@ -30,7 +33,7 @@
             <%= image_tag "sea1.jpg" %>
             <div class="caption">
                 <h3>Taste the Sea</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Do you live in Kansas? Then you can't go taste the sea. Move or drink säl.</p>
                 <p>
                     <button class="btn btn-primary buy-sal">: buy säl :</button> <a href="#" class="btn btn-default">More Info</a>
                 </p>
@@ -43,7 +46,7 @@
             <%= image_tag "sea2.jpg" %>
             <div class="caption">
                 <h3>Hot Yoga</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>If you love hot yoga, you probably love really healthy seeming things. Like säl</p>
                 <p>
                     <button class="btn btn-primary buy-sal">: buy säl :</button> <a href="#" class="btn btn-default">More Info</a>
                 </p>
@@ -56,7 +59,7 @@
             <%= image_tag "sea3.jpg" %>
             <div class="caption">
                 <h3>Hawaiian Hotsprings</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Säl totally comes from them. Our lawyers will challange you to prove otherwise.</p>
                 <p>
                     <button class="btn btn-primary buy-sal">: buy säl :</button> <a href="#" class="btn btn-default">More Info</a>
                 </p>
@@ -69,7 +72,7 @@
             <%= image_tag "sea4.jpg" %>
             <div class="caption">
                 <h3>Rehydrates you with Nature.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Nature! You've bought things for worse reasons.</p>
                 <p>
                     <button class="btn btn-primary buy-sal">: buy säl :</button> <a href="#" class="btn btn-default">More Info</a>
                 </p>
